fix: fixed css header and size

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
     padding: 0;
     font-family: 'Nunito';
     font-style: normal;
-    font-size: 16px;
+    font-size: 24px;
     font-weight: 200;
     color: #000000;
 }
@@ -55,7 +55,6 @@ a:focus:after {
 }
 
 .container {
-    max-width: 1440px;
     padding: 0 15px;
     margin: 0 auto;
 }
@@ -68,11 +67,12 @@ a:focus:after {
 .nav {
     display: flex;
     justify-content: right;
+    margin-left: -50px;
 }
 
 .nav-link {
     text-align: left;
-    margin: 0 5px;
+    margin: 0 15px;
 }
 
 .main {
@@ -121,7 +121,7 @@ a:focus:after {
 .tittle {
     text-align: center;
     font-weight: 400;
-    font-size: 24px;
+    font-size: 34px;
 }
 
 .contacts {
