--- a/style.css
+++ b/style.css
@@ -54,18 +54,26 @@ a:focus:after {
     width: 100%;
 }
 
+.header {
+    padding: 10px 0;
+    background-color: rgba(0, 0, 0, 0.060);
+    position: sticky;
+    top: 0;
+}
+
+.header_color {
+    background-color: rgb(255, 255, 255);
+}
+
 .container {
     padding: 0 15px;
     margin: 0 auto;
-}
-
-.header {
-    padding: 10px 0;
-    background-color: rgba(0, 0, 0, 0.027);
+    display: block;
 }
 
 .nav {
     display: flex;
+    flex-wrap: wrap;
     justify-content: right;
     margin-left: -50px;
 }
@@ -76,12 +84,13 @@ a:focus:after {
 }
 
 .main {
-    padding: 10px 0;
+    padding: 20px 0;
     display: block;
 }
 
 .main__name_photo {
     display: flex;
+    padding-bottom: 10px;
     border-bottom: solid 1px rgba(0, 0, 0, 0.445);
 }
 
@@ -105,6 +114,10 @@ a:focus:after {
 .main__photo {
     width: 30%;
     text-align: center;
+}
+
+.main__photo_img {
+    box-shadow: 1px 0.5px 10px 0.5px black;
 }
 
 .about_me__contacts {
@@ -194,7 +207,7 @@ footer {
     justify-content: space-between;
     align-items: center;
     padding: 2px;
-    background-color: rgba(0, 0, 0, 0.027);
+    background-color: rgba(0, 0, 0, 0.060);
 }
 
 .footer-year {
