--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ a:focus:after {
 }
 
 .header {
-    padding: 10px 0;
+    padding-left: 30px;
     background-color: rgba(0, 0, 0, 0.060);
     position: sticky;
     top: 0;
@@ -76,6 +76,15 @@ a:focus:after {
     flex-wrap: wrap;
     justify-content: right;
     margin-left: -50px;
+}
+
+.nav__ul {
+    list-style-type: none;
+    margin-left: 0;
+    /* Отступ слева в браузере IE и Opera */
+    padding-left: 10px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .nav-link {
@@ -102,12 +111,12 @@ a:focus:after {
     text-align: center;
 }
 
-.mane__name_title {
+.main__name_title {
     text-transform: uppercase;
     font-weight: 400;
 }
 
-.mane__name_subtitle {
+.main__name_subtitle {
     font-weight: 200;
 }
 
@@ -131,6 +140,15 @@ a:focus:after {
     width: 70%;
 }
 
+.projects {
+    padding-top: 20px;
+}
+
+.projects__img {
+    padding-top: 30px;
+    padding-bottom: 20px;
+}
+
 .tittle {
     text-align: center;
     font-weight: 400;
@@ -138,9 +156,24 @@ a:focus:after {
 }
 
 .contacts {
-    width: 30%;
+    display: block;
+    position: relative;
+    left: 5%;
+    top: 200px;
+    width: 20%;
+    height: 40%;
     padding: 10px 0;
     border: solid 1px rgba(0, 0, 0, 0.082);
+}
+
+.Projects {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.ksenija {
+    width: 10px;
 }
 
 .ul_contacts {
